Path tool: touch support for Bezier handles

--- a/test/osd.html
+++ b/test/osd.html
@@ -78,7 +78,7 @@
         var tools = anno.listDrawingTools();
         console.log(tools);
 
-        anno.setDrawingTool('smooth-polyline');
+        anno.setDrawingTool('path');
 
         var selectedTool = 0;
 
